# cicd_demo

./: .gitignore  .gitlab-ci.yml  docker-compose.yml  prompt.md
.github/workflows/: build-and-push.yml  clients-ci.yml
android/: build.gradle.kts  local.properties  settings.gradle.kts  sourcecode.txt
android/app/: build.gradle.kts  proguard-rules.pro
deploy/chart/: Chart.toml  Chart.yaml
deploy/kcl/: main.k
docs/: gitlab-ci-local.md
go-agent/: Dockerfile  go.mod  main.go
huawei-hamony/: AGENTS.md  package.json  sourcecode.txt
huawei-hamony/AppScope/: app.json5
huawei-hamony/entry/: module.json5
ios/: sourcecode.txt
ios/Config/: AppConfig.swift
ios/Models/: AuthModels.swift  CommonModels.swift  CreationModels.swift  NarrativeModels.swift  Project.swift  UserCenterModels.swift
ios/Networking/: APIClient.swift  TokenStore.swift
ios/ViewModels/: AuthViewModel.swift  CreationViewModel.swift  HomeViewModel.swift  NarrativeViewModel.swift  ProjectsViewModel.swift  UserCenterViewModel.swift
ios/Views/: CreationWorkflowView.swift  HomeView.swift  LoginView.swift  MainTabView.swift  NarrativeLabView.swift  NovelCreationApp.swift  PaymentCenterView.swift  ProjectsView.swift  UserCenterView.swift
ios/Views/Components/: MemoryCompassPanel.swift  (+6 more)
ios/com.bukabuka.ios.xcodeproj/: project.pbxproj
python-agent/: Dockerfile  pyproject.toml
python-agent/app/: main.py
rust-agent/: Cargo.toml  Dockerfile
rust-agent/src/: main.rs
uniappx/: index.html  package-lock.json
web-app/: .cta.json  Dockerfile  package.json  tanstack.config.ts  tsconfig.json
(+56 files in other folders)
