[project]
name = "hello-agent"
version = "0.1.0"
description = "Hello world LangChain agent over FastAPI + FastMCP"
authors = [{name = "demo", email = "demo@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.123.5",
  "uvicorn==0.38.0",
  "langchain==1.1.0",
  "fastmcp==2.13.2",
  "agentscope==1.0.8"
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
